--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <header>
+        <a href="/index.html" lang="en">WebStudio</a>
         <nav>
-            <a href="/index.html" lang="en">WebStudio</a>
             <ul>
                 <li><a href="">Cтудія</a></li>
                 <li><a href="">Портфоліо</a></li>
@@ -33,23 +33,30 @@
             <ul>
                 <li>
                     <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-                    <p>Ідейні міркування, і навіть початок
-                        повсякденної роботи з формування позиції.</p>
+                    <p>
+                        Ідейні міркування, і навіть початок повсякденної роботи з
+                        формування позиції.
+                    </p>
                 </li>
                 <li>
                     <h3>ПУНКТУАЛЬНІСТЬ</h3>
-                    <p>Завдання організації, особливо рамки
-                        і місце навчання кадрів тягне у себе.</p>
+                    <p>
+                        Завдання організації, особливо рамки і місце навчання кадрів тягне
+                        у себе.
+                    </p>
                 </li>
                 <li>
                     <h3>ПЛАНУВАННЯ</h3>
-                    <p>Так само консультація з широким
-                        активом значною мірою зумовлює.</p>
+                    <p>
+                        Так само консультація з широким активом значною мірою зумовлює.
+                    </p>
                 </li>
                 <li>
                     <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                    <p>Значимість цих проблем настільки
-                        очевидна, що реалізація планових завдань.</p>
+                    <p>
+                        Значимість цих проблем настільки очевидна, що реалізація планових
+                        завдань.
+                    </p>
                 </li>
             </ul>
         </section>
@@ -89,13 +96,15 @@
         <a href=" /index.html" lang="en">WebStudio</a>
         <address>
             <ul>
-                <li>м. Київ, пр-т Лесі Українки, 26</li>
+                <li>
+                    <a href="https://goo.gl/maps/KPhSYEdFBXfdf23w7" target="«_blank»" rel="«noopener»">м. Київ, пр-т
+                        Лесі Українки, 26</a>
+                </li>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
-
 </body>
 
 </html>
