--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio (Version 2.1)</title>
+
 </head>
 
 <body>
     <header>
-        <a href="/index.html" lang="en">WebStudio</a>
+        <a href="./index.html" lang="en">WebStudio</a>
         <nav>
             <ul>
                 <li><a href="">Cтудія</a></li>
@@ -23,6 +24,7 @@
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
+
     <main>
         <section>
             <h1>Ефективні рішення <br>для вашого бізнесу</h1>
@@ -62,43 +64,44 @@
         </section>
         <section>
             <h2>Чим ми займаємося</h2>
-            <img src="./images/box_1.jpg" alt="Верстка сайтів" width="370">
-            <img src="./images/box_2.jpg" alt="Мобільні додатки" width="370">
-            <img src="./images/box_1.jpg" alt="Графічний дизайн" width="370">
+            <img src="./images/box_1.jpg" alt="Верстка сайтів" width="370" height="294">
+            <img src="./images/box_2.jpg" alt="Мобільні додатки" width="370" height="294">
+            <img src="./images/box_1.jpg" alt="Графічний дизайн" width="370" height="294">
         </section>
         <section>
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/img1.jpg" alt="Ігор Дем'яненко" width="270">
+                    <img src="./images/img1.jpg" alt="Ігор Дем'яненко" width="270" height="260">
                     <h3>Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src=" ./images/img2.jpg" alt="Ольга Рєпіна" width="270">
+                    <img src=" ./images/img2.jpg" alt="Ольга Рєпіна" width="270" height="260">
                     <h3>Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src=" ./images/img3.jpg" alt="Микола Тарасов" width="270">
+                    <img src=" ./images/img3.jpg" alt="Микола Тарасов" width="270" height="260">
                     <h3>Микола Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src=" ./images/img4.jpg" alt="Михайло Єрмаков" width="270">
+                    <img src=" ./images/img4.jpg" alt="Михайло Єрмаков" width="270" height="260">
                     <h3>Михайло Єрмаков</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
+
     <footer>
-        <a href=" /index.html" lang="en">WebStudio</a>
+        <a href=" ./index.html" lang="en">WebStudio</a>
         <address>
             <ul>
                 <li>
-                    <a href="https://goo.gl/maps/KPhSYEdFBXfdf23w7" target="«_blank»" rel="«noopener»">м. Київ, пр-т
-                        Лесі Українки, 26</a>
+                    <a href="https://goo.gl/maps/KPhSYEdFBXfdf23w7" target="_blank" rel="noreferrer noopener">
+                        м.Київ, пр-т Лесі Українки, 26</a>
                 </li>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
